Bug 14789 - iPad: reload button overlaps the sections separator

--- a/skins/weborder/css/confirm.css
+++ b/skins/weborder/css/confirm.css
@@ -66,15 +66,23 @@
     position: relative;
     left: 230px;
 }
+/* for tablets */
+@media only screen and (max-device-width: 949px) {
+    .confirmPayCard .captcha_container {
+        left: 180px !important;
+    }  
+}
+
 .confirmPayCard .captcha_wrap {
     display: inline-block;
     vertical-align: top;
     text-align: center;
-    width: 100px;
+    margin-right: 5px;
 }
 .confirmPayCard .captcha {
     margin-top: 4px;
     height: 30px;
+    width: 70px;
 }
 .confirmPayCard .btn-reload {
     display: inline-block;
